fixing some spacing issues

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 div.page.header {
 	background: $white;
-	position: absolute;
+	position: fixed;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	top: 0px;
